# uiucprescon_build

./: Jenkinsfile  README.md  pyproject.toml  requirements-ci.txt  tox.ini
ci/docker/linux/jenkins/: Dockerfile
ci/docker/linux/tox/: Dockerfile
ci/docker/windows/tox/: Dockerfile
ci/jenkins/scripts/: tox.groovy
docs/: conf.py  index.rst  quickstart.rst
requirements/: requirements-dev.txt  requirements.txt
tests/: test_conan_libs.py  test_integration.py
